@@ -1,0 +1,4 @@
+#pragma once
+
+#define BATTERY_LOW 30
+#define BATTERY_VERY_LOW 20
