@@ -3,6 +3,7 @@ cyberWatch 0.1
  - shows splashscreen
  - shows current time & date (include day of week)
  - shows battery capacity (with battery icon "progressbar")
+ - warn on baterry low/very low (vibrate / double vibrate), turn on display and render battery icon with red color
  - show charging state (plug icon)
  - turn off display and cpu goes light sleep on inactivity (battery savings) - wake up by display touch
  - use CPU light sleep  200ms during main loop (energy saving)
